--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,7 @@
     "stylelint-config-htmlacademy"
   ],
   "rules": {
-    "indentation": 4,
+    "indentation": 2,
     "at-rule-no-vendor-prefix": true,
     "at-rule-empty-line-before": "always",
     "scss/selector-no-redundant-nesting-selector": true,
@@ -27,8 +27,10 @@
       "px",
       "vh",
       "vm",
+      "vw",
       "vmax",
-      "vmin"
+      "vmin",
+      "deg"
     ]
   }
 }
