--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "normalize.css": "^8.0.1",
     "swiper": "^6.5.0"
   },
